--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
@@ -12,14 +13,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "lib": "^5.0.1",
     "material-ui-image": "^3.3.2",
     "mdb-react-ui-kit": "^6.1.0",
     "npm": "^6.13.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks": "^1.0.1",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-user-profile": "^1.0.3",
     "styled-components": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
